osd/osd_types: don't increment snap_seq on removal

Avoid adjacent snap ids removals discontinuity in monitor's purged_snap and OSD's PSN entries.

Fixes: https://tracker.ceph.com/issues/62983

Signed-off-by: Matan Breizman <mbreizma@redhat.com>